--- a/app/src/main/res/layout/content_mic.xml
+++ b/app/src/main/res/layout/content_mic.xml
@@ -58,7 +58,7 @@
                 android:src="@drawable/micimage"></androidx.appcompat.widget.AppCompatImageView>
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/refigButton"
+                android:id="@+id/refrigButton"
                 android:layout_width="160dp"
                 android:layout_height="340dp"
                 android:layout_gravity="center"
